<resources>
    <string name="app_name">Agenda de contactos</string>

    <!-- Item Contact -->
    <string name="item_contacto_name_initial_hint">T</string>
    <string name="item_contacto_name_hint">El título va aquí</string>
    <string name="item_contacto_number_hint">Texto secundario</string>

    <!-- Fragment contacts -->
    <string name="fragment_contacts_empty_image">Imagen vacía</string>
    <string name="fragment_contacts_empty_title">Tu lista de contactos está vacía</string>
    <string name="fragment_contacts_empty_paragraph">Parece que aún no has agregado ningun contacto</string>
    <string name="fragment_contacts_add_contact">Agregar contacto</string>

    <!-- Main and Toolbar -->
    <string name="main_contacts_title">Contactos</string>
    <string name="search_main_activity_hint">Buscar datos aquí&#8230;</string>

    <!-- Permisos -->
    <string name="btn_details_try_again_message_call">Tu necesitas habilitar este permiso para realizar llamada</string>
    <string name="btn_details_try_again_call">Reintentar</string>
    <string name="btn_details_try_again_cancel">No gracias</string>

    <!-- Abrir Correo electrónico -->
    <string name="btn_details_send_email">Enviar usando&#8230;</string>
    <string name="message_details_send_email_header">Mensaje de prueba</string>
    <string name="message_details_send_email_body">Creado por Alejandro Martinez</string>

    <!-- Exportar Import contacts -->
    <string name="btn_main_activity_try_again_message">Tu necesitas habilitar este permiso para poder exportar e importar contactos</string>
    <string name="btn_main_activity_try_again">Reintentar</string>
    <string name="btn_main_activity_try_again_cancel">No gracias</string>

    <!-- Validations -->
    <string name="invalidate_name">Por favor ingrese un nombre valido</string>
    <string name="invalidate_direction">Por favor ingrese una dirección válida</string>
    <string name="invalidate_phone">Por favor ingrese un número valido</string>
    <string name="invalidate_telephone">Por favor ingrese un número valido</string>
    <string name="invalidate_email">Ingrese un correo electronico valido</string>
    <string name="add_contact_validation_succ">Validación exitosa</string>
    <string name="add_contact_validation_fai">Error en validación</string>

    <!-- Order By -->
    <string name="main_activity_order_by_title">Ordenar por</string>
    <string name="main_activity_order_by_option_one">Ascendente</string>
    <string name="main_activity_order_by_option_two">Descendente</string>
    <string name="main_activity_order_by_option_three">Más nuevo</string>
    <string name="main_activity_order_by_option_four">Más antiguo</string>

    <!-- Menu Actions -->
    <string name="menu_action_search">Buscar</string>
    <string name="menu_action_order_by">Ordenar por</string>
    <string name="menu_action_delete_all">Borrar todo</string>
    <string name="menu_action_export">Exportar</string>
    <string name="menu_action_import">Importar</string>

    <!-- Menu Actions Popup -->
    <string name="menu_action_popup_edit">Editar</string>
    <string name="menu_action_popup_delete">Borrar</string>

    <!-- Contact Add -->
    <string name="contact_add_title">Agregar contacto</string>

    <string name="contact_add_name_hint">Nombres</string>
    <string name="contact_add_name">Alejandro Martinez</string>
    <string name="contact_add_name_helper">Pepito Perez</string>
    <string name="contact_add_name_error">Error en el nombre</string>

    <string name="contact_add_direction_hint">Dirección</string>
    <string name="contact_add_direction">Alang Turing</string>
    <string name="contact_add_direction_helper">Calle 12 N 13 &#8211; 14</string>
    <string name="contact_add_direction_error">Error en la dirección</string>

    <string name="contact_add_phone_hint">Móvil</string>
    <string name="contact_add_phone">123654789</string>
    <string name="contact_add_phone_helper">123456789</string>
    <string name="contact_add_phone_error">Error en el móvil</string>

    <string name="contact_add_telephone_hint">Teléfono</string>
    <string name="contact_add_telephone">603214578</string>
    <string name="contact_add_telephone_helper">603456789</string>
    <string name="contact_add_telephone_error">Error en el Teléfono</string>

    <string name="contact_add_email_hint">Correo electrónico</string>
    <string name="contact_add_email">alejandro@gmail.com</string>
    <string name="contact_add_email_helper">ejemplo@gmail.com</string>
    <string name="contact_add_email_error">Error en el Correo electrónico</string>

    <string name="contact_add_btn_save">Guardar</string>
    <string name="contact_add_btn_cancel">Cancelar</string>
    <!-- End Contact Add -->


    <!-- Fragment Details -->
    <string name="details_contact_name_icon">Icono de persona</string>
    <string name="details_contact_name_hint">Nombres</string>
    <string name="details_contact_name">Alejandro Martinez</string>
    <string name="details_contact_name_helper">Pepito Perez</string>
    <string name="details_contact_name_error">Error en el nombre</string>

    <string name="details_contact_direction_icon">Icono de dirección</string>
    <string name="details_contact_direction_hint">Dirección</string>
    <string name="details_contact_direction">Alang Turing</string>
    <string name="details_contact_direction_helper">Calle 12 N 13 &#8211; 14  </string>
    <string name="details_contact_direction_error">Error en la dirección</string>

    <string name="details_contact_phone_icon">Icono de celular</string>
    <string name="details_contact_phone_hint">Movil</string>
    <string name="details_contact_phone">123654789</string>
    <string name="details_contact_phone_helper">123456789</string>
    <string name="details_contact_phone_error">Error en el móvil</string>

    <string name="details_contact_telephone_icon">Icono de Teléfono</string>
    <string name="details_contact_telephone_hint">Teléfono</string>
    <string name="details_contact_telephone">603214578</string>
    <string name="details_contact_telephone_helper">603456789</string>
    <string name="details_contact_telephone_error">Error en el Teléfono</string>

    <string name="details_contact_email_icon">Icono de correo</string>
    <string name="details_contact_email_hint">Correo electrónico</string>
    <string name="details_contact_email">alejandro@gmail.com</string>
    <string name="details_contact_email_helper">ejemplo@gmail.com</string>
    <string name="details_contact_email_error">Error en el Correo electrónico</string>

    <string name="details_contact_btn_save">Guardar</string>
    <string name="details_contact_btn_cancel">Cancelar</string>
    <!-- End Fragment Details -->


    <!-- Contact Edit -->
    <string name="contact_edit_title">Editar Contacto</string>

    <string name="contact_edit_name_hint">Nombres</string>
    <string name="contact_edit_name">Alejandro Martinez</string>
    <string name="contact_edit_name_helper">Pepito Perez</string>
    <string name="contact_edit_name_error">Error en el nombre</string>

    <string name="contact_edit_direction_hint">Dirección</string>
    <string name="contact_edit_direction">Alang Turing</string>
    <string name="contact_edit_direction_helper">Calle 12 N 13 &#8211; 14</string>
    <string name="contact_edit_direction_error">Error en la dirección</string>

    <string name="contact_edit_phone_hint">Movil</string>
    <string name="contact_edit_phone">123654789</string>
    <string name="contact_edit_phone_helper">123456789</string>
    <string name="contact_edit_phone_error">Error el móvil</string>

    <string name="contact_edit_telephone_hint">Teléfono</string>
    <string name="contact_edit_telephone">603214578</string>
    <string name="contact_edit_telephone_helper">603456789</string>
    <string name="contact_edit_telephone_error">Error en el Teléfono</string>

    <string name="contact_edit_email_hint">Correo electrónico</string>
    <string name="contact_edit_email">alejandro@gmail.com</string>
    <string name="contact_edit_email_helper">ejemplo@gmail.com</string>
    <string name="contact_edit_email_error">Error en el Correo electrónico</string>

    <string name="contact_edit_btn_save">Guardar</string>
    <string name="contact_edit_btn_cancel">Cancelar</string>
    <!-- End Contact Edit -->

    <!-- Toast -->
    <string name="main_activity_toast_export_error">Se ha producido un error, inténtelo de nuevo o póngase en contacto con el desarrollador. </string>
    <string name="main_activity_toast_export_successful">Contactos exportados con éxito en: </string>

    <string name="main_activity_toast_import_error">Se ha producido un error, inténtelo de nuevo o póngase en contacto con el desarrollador. </string>
    <string name="main_activity_toast_import_successful">Contactos importados con éxito de: </string>
    <string name="fragment_details_collapsing_title">Detalles</string>

</resources>