<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_order_by"
        android:title="@string/menu_action_order_by"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/menu_action_delete_all"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:title="@string/menu_action_export"
        android:icon="@drawable/ic_baseline_download_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/menu_action_import"
        android:icon="@drawable/ic_baseline_import_export_24"
        app:showAsAction="never" />

</menu>